2013-03-17
* expand picture generation in findlibs.py, does not yet take WEAK symbols
into account
* prevent infinite looping in Broadcom variant of unsquashfs
* change default parameters for bat-romfsck
* fix error in gzip unpacking: too much stuff was blacklisted if offset != 0
* rewrite genericSearch so it only searches a file once for license and forge
scanning

2013-03-16
* store kernel symbols (exported with EXPORT_SYMBOL*) as 'kernelsymbol'
instead of 'variable'
* update dedexer to 1.26 since it can handle ODEX files better
* add support for supplying list of rewrites to batchextractprogramstrings.py
* enable new Atheros version of unsquashfs
* prevent infinite looping in unpacking squashfs file systems for Atheros 2
variant and OpenWrt variant. Other variants need fixes as well.

2013-03-15
* fix error in batchextractprogramstrings.py: wrong type was stored for
variables extracted from the Linux kernel
* add undeclared but used dependencies to graph pictures in findlibs.py.
Change colour of edges.

2013-03-14
* fix ZIP unpacking error
* better handle unsquashfs errors. There are some squashfs file systems where
file systems from Broadcom seem to be unpacked successfully by normal
unsquashfs versions and other versions of squashfs, but where unpacking
actually fails with gzip errors. By treating these as errors the script will
fall through to the broadcom unpacker which (hopefully) will be successful.
* generate separate ELF report (needs actually to be moved to findlibs.py) and
display in the GUI
* add squashfs variant for Atheros. This variant is not yet enabled, but needs
more testing first to determine the right order where to place it (before the
other Atheros unsquashfs for sure)

2013-03-13
* fix reports
* partially parallelise findlibs.py
* generate pictures in findlibs.py
* fix GUI so at least some information about empty files/symlinks/etc. is shown

2013-03-12
* kernel modules might store strings in different sections than .rodata, like